# onogawa

./: .gitignore  CMakeLists.txt  README.md
include/onogawa/: compass.hpp  onogawa.hpp  point2.hpp  point3.hpp  pose2.hpp  pose3.hpp  quaternion.hpp
notebooks/: quaternion.ipynb
src/: onogawa.cpp
test/: test_onogawa.cpp  test_quaternion.cpp
